# sakila_lab_daniela_algerydh

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml
evidence/: .gitignore  evidence.config.yaml
evidence/pages/: actors.md  films.md  index.md  revenue.md
evidence/sources/: connection.yaml
evidence/sources/sakila/: actors.sql  actors_film.sql  connection.yaml  customer_payments.sql  customers.sql  films.sql  revenue.sql
evidence/sql/: avg_film_length.sql  most_active_customer.sql  no1_film_revenue.sql  top_five_customers.sql  top_providing_category.sql
notebooks/: 00_ingest_sakila.ipynb  01_eda.ipynb  02_visualizations.ipynb
scripts/: ingest_sakila.py
