[project]
name = "sakila-lab-daniela-algerydh"
version = "0.1.0"
description = "Examinating project in Database handling-course"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dlt[duckdb,sql-database]>=1.18.2",
    "duckdb>=1.4.2",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
]
